<resources>
    <string name="app_name">FlyShippment_Project</string>

    // Belly
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log IN</string>

    // mayer
    <string name="search_word"> Search </string>
    <string name="save_word">save</string>
    <string name="save_changes_word"> Save Changes </string>
    <string name="update_word">Update</string>
    <string name="delete_word">Delete</string>

    <string name="from_word">From</string>
    <string name="to_word">To</string>
    <string name="item_name_word">Item Name</string>
    <string name="item_url_word">Item Url</string>
    <string name="item_number_word">Item Number</string>
    <string name="item_price_word">Item Price</string>
    <string name="item_weight_word">Item Weight</string>
    <string name="total_price_word">Total Price</string>
    <string name="total_weight_word">Total Weight</string>
    <string name="available_weight_word">Available Weight</string>
    <string name="date_word">Date</string>
    <string name="email_word">Email:</string>
    <string name="passport_num_word">Passport num:</string>
    <string name="phone_num_word">Phone num:</string>
    <string name="change_photo_word">Change Photo</string>
    <string name="first_name_word">First Name</string>
    <string name="last_name_word">Last Name</string>
    <string name="go_profile_word">Go To Profile</string>


    <string name="add_shipment_word">ADD SHIPMENT</string>
    <string name="add_trip_word">ADD TRIP</string>
    <string name="edit_word">Edit</string>
    <string name="deals_word">Deals</string>
    <string name="trips_word">Trips</string>
    <string name="shipments_word">Shipments</string>
    <string name="rate_word">Rate</string>
    <string name="user_name_word">User name</string>
    <string name="upload_word">Upload</string>
    <string name="before_uploading_trip_text">If you press uploade you will not be able to edit this trip</string>
    <string name="add_to_trip_text">Add to trip</string>
    <string name="request_sent_text">request sent</string>
    <string name="not_uoloaded_text">not uploaded yet</string>
    <string name="current_deals">Current Deals</string>
    <string name="ships_requests">Ships Requests</string>
    <string name="send_request_question">send request ?</string>
    <string name="pending_word">pending</string>
    <string name="go_to_deals_text">Go To Deals</string>
    <string name="remove_from_request_text">remove from request</string>
    <string name="approve_word">approve</string>
    <string name="reject_word">reject</string>
    <string name="show_step">Show Step</string>
    <string name="shipper_confirmation_text">Shipper confirmation</string>
    <string name="deliver_shipment_text">Delivery of the shipment</string>
    <string name="reach_destination_text">Reach destination</string>
    <string name="fly_from_home_text">Fly from home</string>
    <string name="receive_shipment_text">Receive shipment</string>
    <string name="confirm_word">Confirm</string>
    <string name="next_step_word">next step</string>

    <string name="terms_and_privacy_text">
        i) Privacy principles
We build privacy that works for everyone. It’s a responsibility that comes with creating products and services that are free and accessible for all. We look to these principles to guide our products, our processes, and our people in keeping our users’ data private, safe, and secure.
ii) In case of problems or disagreements
By law, you have the right to
        (1)a certain quality of service, and
        (2) ways to fix problems if things go wrong. These terms don’t limit or take away any of those rights. For example, if you’re a consumer, then you continue to enjoy all legal rights granted to consumers under applicable law.
iii) Warranty We provide our services using reasonable skill and care. If we don’t meet the quality level described in this warranty, you agree to tell us and we’ll work with you to try to resolve the issue.
If you don’t follow these terms or the service-specific additional terms, and we don’t take action right away, that doesn’t mean we’re giving up any rights that we may have, such as taking action in the future.
We may update these terms and service-specific additional terms
        (1) to reflect changes in our services or how we do business — for example, when we add new services, features, technologies, pricing, or benefits (or remove old ones),
        (2) for legal, regulatory, or security reasons, or
        (3) to prevent abuse or harm.
If we materially change these terms or service-specific additional terms, we’ll provide you with reasonable advance notice and the opportunity to review the changes, except
        (1) when we launch a new service or feature, or
        (2) in urgent situations, such as preventing ongoing abuse or responding to legal requirements.
        If you don’t agree to the new terms, you should remove your content and stop using the services.
    </string>

</resources>
