<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30555D">

    <Button
        android:id="@+id/edit_trip_uploade_button"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bushape"
        android:text="@string/upload_word"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trip_warning_text" />

    <EditText
        android:id="@+id/edit_trip_last_date"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:gravity="center_vertical"
        android:hint="@string/date_word"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trip_available_weight" />

    <EditText
        android:id="@+id/edit_trip_available_weight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:gravity="center_vertical"
        android:hint="@string/available_weight_word"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trip_to" />

    <EditText
        android:id="@+id/edit_trip_to"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:gravity="center_vertical"
        android:hint="@string/to_word"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trip_from" />

    <EditText
        android:id="@+id/edit_trip_from"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:hint="@string/from_word"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintBottom_toTopOf="@+id/edit_trip_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_trip_back_button"
        android:layout_width="68dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bushape"
        android:foreground="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_trip_delete_button"
        android:layout_width="124dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bushape"
        android:text="@string/delete_word"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_trip_add_button"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bushape"
        android:text="@string/save_changes_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trip_last_date" />

    <TextView
        android:id="@+id/edit_trip_warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/before_uploading_trip_text"
        android:textColor="#FEFEFE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trip_add_button" />


</androidx.constraintlayout.widget.ConstraintLayout>