<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="#798C8A">

    <Button
        android:id="@+id/edit_shipment_upload_button"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:text="@string/upload_word"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_warning_text" />

    <EditText
        android:id="@+id/edit_shipment_item_urll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="300dp"
        android:height="40dp"
        android:gravity="center_vertical"
        android:hint="@string/item_url_word"
        app:layout_constraintEnd_toEndOf="@+id/edit_shipment_item_name"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_name" />

    <TextView
        android:id="@+id/edit_shipment_item_total_weight"
        android:layout_width="133dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:width="80dp"
        android:height="40dp"
        android:gravity="center"
        android:text="Total Weight=0gm"
        app:layout_constraintStart_toEndOf="@+id/edit_shipment_item_weight"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_price" />

    <TextView
        android:id="@+id/edit_shipment_item_total_price"
        android:layout_width="133dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:width="80dp"
        android:height="40dp"
        android:gravity="center"
        android:text="total price=0$"
        app:layout_constraintStart_toEndOf="@+id/edit_shipment_item_price"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_urll" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="116dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:width="80dp"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/item_number_word"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_urll"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_weight" />

    <EditText
        android:id="@+id/edit_shipment_item_price"
        android:layout_width="133dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:width="80dp"
        android:height="40dp"
        android:gravity="center"
        android:hint="@string/item_price_word"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_urll" />

    <EditText
        android:id="@+id/edit_shipment_item_weight"
        android:layout_width="133dp"
        android:layout_height="43dp"
        android:width="80dp"
        android:height="40dp"
        android:gravity="center"
        android:hint="@string/item_weight_word"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_price"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_price" />

    <EditText
        android:id="@+id/edit_shipment_date"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:hint="@string/date_word"
        app:layout_constraintEnd_toEndOf="@+id/edit_shipment_to"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_to"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_to" />

    <EditText
        android:id="@+id/edit_shipment_to"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:hint="@string/to_word"
        app:layout_constraintEnd_toEndOf="@+id/edit_shipment_from"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_from"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_from" />

    <EditText
        android:id="@+id/edit_shipment_from"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:hint="@string/from_word"
        app:layout_constraintBottom_toTopOf="@+id/edit_shipment_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_shipment_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="300dp"
        android:height="40dp"
        android:gravity="center_vertical"
        android:hint="@string/item_name_word"
        app:layout_constraintEnd_toEndOf="@+id/edit_shipment_date"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_date" />

    <Button
        android:id="@+id/edit_shipment_get_image_button"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:foreground="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_weight"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_plus_item" />

    <EditText
        android:id="@+id/edit_shipment_item_number"
        android:layout_width="79dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_total_weight" />

    <Button
        android:id="@+id/edit_shipment_plus_item"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toStartOf="@+id/edit_shipment_item_number"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_total_weight" />

    <Button
        android:id="@+id/edit_shipment_minus_item"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@android:drawable/ic_delete"
        app:layout_constraintStart_toEndOf="@+id/edit_shipment_item_number"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_total_weight" />

    <ImageView
        android:id="@+id/edit_shipment_the_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/edit_shipment_get_image_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_number"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/edit_shipment_edit_button"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_changes_word"
        app:layout_constraintStart_toStartOf="@+id/edit_shipment_get_image_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_get_image_button" />

    <Button
        android:id="@+id/edit_shipment_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFF"
        android:foreground="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_shipment_delete_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/delete_word"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_shipment_warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="If you presses Uploade you will not be able to edit this shipment"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_the_image" />

</androidx.constraintlayout.widget.ConstraintLayout>